# PP1_Astronomica_I_-IM

./: .gitattributes  .gitignore  Graficos_IM.py  Makefile  README.md  amax_corregido_ruido  consolidacion.py  conversion.py  filtrado.py  filtrado_rge.py  pyproject.toml  run_analysis.py  transformacion.py
CALCULOS/: IM_con_graficos_e1.py
IM/: IM_sin_graficos_e2
calculo/: analizador_masa_simplificado.py  calcular_indice_masa.py  data_cleaning.py
data/processed/: 2024_consolidado_extra_rge_superior.csv
data/raw/: mp20240101.riogrande.mpd  mp20240102.riogrande.mpd  mp20240103.riogrande.mpd  mp20240104.riogrande.mpd  mp20240105.riogrande.mpd  mp20240106.riogrande.mpd  mp20240107.riogrande.mpd  mp20240108.riogrande.mpd  mp20240109.riogrande.mpd  mp20240110.riogrande.mpd  mp20240111.riogrande.mpd  mp20240112.riogrande.mpd  mp20240113.riogrande.mpd  (+352 more)
docs/: mkdocs.yml
notebooks/: 1.0-PP1-IM-limpieza-dataset.ipynb  2.0-PP1-IM-calculo-indice.ipynb  PP1 - ETv6.ipynb  PP1 - ETv7.ipynb  PP1 - IMv3.ipynb
reports/: 2024_consolidado_IM_temporalidades.csv  indice_masa_2024_20250605_020808.txt  indice_masa_Abril_20250605_021507.txt  indice_masa_Agosto_20250605_021532.txt  indice_masa_Diciembre_20250605_021556.txt  indice_masa_Enero_20250605_021429.txt  indice_masa_Febrero_20250605_021454.txt  indice_masa_Julio_20250605_021526.txt  indice_masa_Junio_20250605_021520.txt  indice_masa_Marzo_20250605_021502.txt  indice_masa_Mayo_20250605_021512.txt  indice_masa_Noviembre_20250605_021549.txt  indice_masa_Octubre_20250605_021544.txt  indice_masa_Septiembre_20250605_021538.txt
(+1555 files in other folders)
