[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "calculo"
version = "0.0.1"
description = "Repositorio del proyecto Astronomica I (IM), de la materia Practica Profesionalizante I"
authors = [
  { name = "Bellesi Gabriel - Garc\u00eda Gisela - Ortiz Cristian - R\u00edos Vanesa" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["calculo"]
include = ["pyproject.toml", "calculo/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["calculo"]
force-sort-within-sections = true

